--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,6 +1,3 @@
-server:
-  port: 8080
-
 spring:
   datasource:
     url: jdbc:postgresql://43.143.195.208:5432/test
@@ -13,8 +10,5 @@ spring:
       port: 6379
       password: allio
 
-mybatis-plus:
-  mapper-locations: classpath:mapper/*.xml
-  global-config:
-    db-config:
-      id-type: assign_id
+#knife4j:
+#  production: true
