feat: 1.增加角色相关接口，以及角色菜单绑定接口，2.增加菜单相关接口，3.增加个人信息接口，个人菜单接口

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <knife4j.version>4.3.0</knife4j.version>
         <bcpkix-jdk15on.version>1.70</bcpkix-jdk15on.version>
         <capatcha.version>2.2.3</capatcha.version>
+        <ognl.version>3.1.26</ognl.version>
     </properties>
 
     <dependencyManagement>
@@ -95,6 +96,10 @@
             <artifactId>postgresql</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
         </dependency>
@@ -148,6 +153,11 @@
             <groupId>cc.allio</groupId>
             <artifactId>uno-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>ognl</groupId>
+            <artifactId>ognl</artifactId>
+            <version>${ognl.version}</version>
         </dependency>
     </dependencies>
 
