--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,10 @@ spring:
     name: turbo
   profiles:
     active: dev
+    # 开启虚拟线程
+  threads:
+    virtual:
+      enabled: true
   security:
     oauth2:
       authorizationserver:
@@ -74,7 +78,7 @@ secure:
     - /webjars/** # knife4j 静态资源
     - /v3/api-docs/**
     - /auth/captcha # 验证码
-    - /sys/tenant/list # 租户
+    - /sys/tenant/** # 租户
     - /auth/register # 注册
     - /sys/attachment/download/** # 文件下载
   jwt:
@@ -96,3 +100,11 @@ file:
     path: http://localhost:8600
     # 文件上传最大大小
     max-size: 10485760
+persistent:
+  tenant:
+    field: tenant_id
+    ignore-list:
+      - sys_tenant
+      - sys_user_role
+      - sys_role_menu
+      - sys_cloud_storage_config
