feat:1.改造通用查询、2.增加mybatis-plus树形查询

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -15,6 +15,6 @@ mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
-#logging:
-#  level:
-#    org.springframework: debug
+logging:
+  level:
+    cc.allio.uno: info
