--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -83,3 +83,8 @@ otel:
       enabled: false
   sdk:
     disabled: false
+# easyexcel枚举扫描路径
+excel:
+  enum:
+    scanner:
+      package: cc/allio/turbo/modules/system/constant/**/*
