feat: 1.improve integrate open observe log 2.fix relevant message problem 3.add log mode.

--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,10 @@
             <artifactId>uno-data-mongodb</artifactId>
         </dependency>
         <dependency>
+            <groupId>cc.allio</groupId>
+            <artifactId>uno-http</artifactId>
+        </dependency>
+        <dependency>
             <groupId>ognl</groupId>
             <artifactId>ognl</artifactId>
             <version>${ognl.version}</version>
