--- a/src/main/resources/application-turbo.yml
+++ b/src/main/resources/application-turbo.yml
@@ -57,17 +57,20 @@ turbo:
         - dev_datasource
   ob:
     log:
-      exporter:
+      openobserve:
         # 是否启用日志
         enabled: false
         # 日志服务地址
         endpoint: http://43.143.195.208:5080/api/default/default/_json
+        # 组织
         # 日志头
         headers:
           Authorization: "Basic amlhbmd3MTAyN0BnbWFpbC5jb206RmExZFNhU1VaNXByZ3VVbQ=="
           stream-name: "default"
         # 日志发送超时时间
         timeout: 100000
+        organization: default
+        stream: turbo
     metric:
       exporter:
         # 是否启用metric
