--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,15 +1,15 @@
 spring:
   datasource:
-    url: jdbc:postgresql://43.143.195.208:5432/turbo
+    url: jdbc:postgresql://localhost:5432/turbo
     username: postgres
-    password: allio@2022
+    password: postgres
     driver-class-name: org.postgresql.Driver
   data:
     redis:
-      host: 43.143.195.208
+      host: localhost
       port: 6379
-      password: allio
-      database: 1
+      password: redis
+      database: 0
 
 logging:
   level:
