--- a/src/main/resources/application-turbo.yml
+++ b/src/main/resources/application-turbo.yml
@@ -61,11 +61,11 @@ turbo:
         # 是否启用日志
         enabled: false
         # 日志服务地址
-        endpoint: http://43.143.195.208:5080/api/default/default/_json
+        endpoint: http://localhost:5080/api/default/default/_json
         # 组织
         # 日志头
         headers:
-          Authorization: "Basic amlhbmd3MTAyN0BnbWFpbC5jb206RmExZFNhU1VaNXByZ3VVbQ=="
+          Authorization: xxxxxxxx
           stream-name: "default"
         # 日志发送超时时间
         timeout: 100000
@@ -82,4 +82,4 @@ turbo:
         # 是否启用trace
         enabled: false
         # trace服务地址
-        endpoint: http://43.143.195.208:9411/api/v2/spans
+        endpoint: http://localhost:9411/api/v2/spans
