--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <easyeexcel.version>3.3.2</easyeexcel.version>
         <opentelemetry.version>1.33.0</opentelemetry.version>
         <justauth.version>1.16.6</justauth.version>
+        <jodd.version>5.3.0</jodd.version>
     </properties>
 
     <dependencyManagement>
@@ -281,6 +282,11 @@
             <groupId>me.zhyd.oauth</groupId>
             <artifactId>JustAuth</artifactId>
             <version>${justauth.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jodd</groupId>
+            <artifactId>jodd-core</artifactId>
+            <version>${jodd.version}</version>
         </dependency>
         <!-- test -->
         <dependency>
