--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,7 @@
 # Copied from https://github.com/squidfunk/mkdocs-material/blob/b8cf7d7/requirements.txt
 
-mkdocs>=1.1
+mkdocs==1.5.3
+mkdocs-material==9.4.5
 Pygments>=2.4
 markdown>=3.2
 pymdown-extensions>=7.0
