--- a/src/main/resources/application-persistent.yml
+++ b/src/main/resources/application-persistent.yml
@@ -8,7 +8,7 @@ turbo:
         - sys_tenant
         - sys_user_role
         - sys_role_menu
-        - sys_cloud_storage_config
         - sys_user_post
         - biz_tree
         - dev_datasource
+        - sys_storage_config
