--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>cc.allio</groupId>
     <artifactId>Turbo</artifactId>
-    <version>0.1.1</version>
+    <version>0.2.0</version>
     <name>Turbo</name>
     <description>Turbo快速开发平台</description>
     <url>https://github.com/ClearXs/Turbo.git</url>
@@ -35,6 +35,7 @@
         <uno.version>1.2.0</uno.version>
         <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
         <maven-plugin.version>3.11.0</maven-plugin.version>
+        <spring-ai.version>1.0.0-SNAPSHOT</spring-ai.version>
 
         <knife4j.version>4.5.0</knife4j.version>
         <bcpkix-jdk15on.version>1.70</bcpkix-jdk15on.version>
@@ -61,6 +62,13 @@
                 <groupId>io.opentelemetry.instrumentation</groupId>
                 <artifactId>opentelemetry-instrumentation-bom</artifactId>
                 <version>2.6.0</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.ai</groupId>
+                <artifactId>spring-ai-bom</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -223,6 +231,27 @@
             <groupId>org.jodd</groupId>
             <artifactId>jodd-core</artifactId>
             <version>${jodd.version}</version>
+        </dependency>
+        <!-- AI  -->
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-openai-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-vertex-ai-gemini-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-zhipuai-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-qianfan-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-ollama-spring-boot-starter</artifactId>
         </dependency>
         <!-- test -->
         <dependency>
