--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,14 +1,14 @@
 spring:
   datasource:
-    url: ${DATASOURCE_URL:jdbc:postgresql://localhost:5432/turbo}
+    url: ${DATASOURCE_URL:jdbc:postgresql://74.48.78.226:5432/turbo}
     username: ${DATASOURCE_USERNAME:postgres}
-    password: ${DATASOURCE_PASSWORD:postgres}
+    password: ${DATASOURCE_PASSWORD:allio}
     driver-class-name: org.postgresql.Driver
   data:
     redis:
-      host: ${REDIS_HOST:localhost}
+      host: ${REDIS_HOST:74.48.78.226}
       port: ${REDIS_PORT:6379}
-      password: ${REDIS_PASSWORD:redis}
+      password: ${REDIS_PASSWORD:allio}
       timeout: ${REDIS_TIMEOUT:5000}
       database: ${REDIS_DATABASE:0}
 
