--- a/src/main/resources/ai/agent/sma/agent.yaml
+++ b/src/main/resources/ai/agent/sma/agent.yaml
@@ -2,5 +2,5 @@ name: SMA
 description: Turbo is a rapid development framework designed to create a one-stop solution for enterprise-level application development, tailored to future trends.
 actions:
   - chat
-tools:
+externalTools:
   - create
